<resources>
    <string name="app_name">Aptitude</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_page">MainPage</string>
    <string name="title_activity_group_page">GroupPage</string>
    <string name="GroupID">GroupId</string>
    <string name="UserID">UserId</string>
    <string name="title_activity_user_page">UserPage</string>
    <string name="title_activity_register_page">RegisterPage</string>
    <string name="type_msg">Type message</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="or">or</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="forgot_my_pwd">I’ve forgotten my password?</string>
    <string name="my_chats">My Chats</string>
    <string name="all_chats">All Chats</string>
    <string name="search">Search</string>
    <string name="to">To:</string>
    <string name="edit">Edit</string>
    <string name="new_chat">New Chat</string>
    <string name="alert_wait">Please wait...</string>
    <string name="err_fields_empty">Please fill all the fields.</string>
    <string name="err_singup">Error occurred while signup:</string>
    <string name="err_login">Error occurred while login:</string>
    <string name="err_users">Error occurred while finding users:</string>
    <string name="alert_loading">Loading...</string>
    <string name="msg_no_user_found">No users found for chat!</string>
    <string name="sign_up">Sign Up</string>
    <string name="location">Location</string>
    <string name="age">Age</string>
    <string name="disease">Disease</string>
    <string name="about_me">Your Story</string>
    <string name="current_status">Status of Problem</string>
    <string name="name">Full Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="suffering">Suffering</string>
    <string name="log_out">Log Out</string>
    <string name="title_activity_add_group_page">AddGroupPage</string>
    <string name="group_name">Group Name</string>
    <string name="group_description">Group Description</string>
    <string name="add_group">Add Group</string>
    <string name="title_activity_community_page">CommunityPage</string>
    <string name="choose_your_suffering">Choose Your Suffering ...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="refresh">Refresh</string>
    <string name="my_profile">MY PROFILE</string>
    <string name="user_info">USER_INFO</string>

</resources>
