<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Views.Activities.RegisterPage"
    tools:showIn="@layout/activity_register_page">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/pad_20dp"
        android:paddingLeft="@dimen/pad_15dp"
        android:paddingRight="@dimen/pad_15dp"
        android:paddingTop="@dimen/pad_20dp" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/pad_20dp"
            android:src="@drawable/logo_login" />

        <EditText
            android:id="@+id/email"
            style="@style/editext_graybg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pad_5dp"
            android:hint="@string/email" >
            <requestFocus />
        </EditText>


        <EditText
            android:id="@+id/name"
            style="@style/editext_graybg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pad_5dp"
            android:hint="@string/name" >
        </EditText>

        <EditText
            android:id="@+id/password"
            style="@style/editext_graybg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pad_5dp"
            android:hint="@string/password"
            android:inputType="textPassword" >
        </EditText>

        <EditText
            android:id="@+id/location"
            style="@style/editext_graybg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pad_5dp"
            android:hint="@string/location" >
        </EditText>

        <EditText
            android:id="@+id/age"
            style="@style/editext_graybg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pad_5dp"
            android:hint="@string/age" >
        </EditText>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gender"
            android:layout_marginTop="@dimen/pad_5dp"
            style="@style/editext_graybg"
            android:checkedButton="@+id/male"
            android:text="@string/gender"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/male"
                android:text="@string/male" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/female"
                android:text="@string/female" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/other"
                android:text="@string/other" />

        </RadioGroup>


        <Spinner
            android:id="@+id/suffering"
            style="@style/editext_graybg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries = "@array/TYPES_OF_SUFFERINGS"
            android:layout_marginTop="@dimen/pad_5dp"
            android:hint="@string/suffering" >
        </Spinner>

        <Spinner
            android:id="@+id/status"
            style="@style/editext_graybg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries = "@array/CURRENT_STATUS"
            android:layout_marginTop="@dimen/pad_5dp"
            android:hint="@string/current_status" >
        </Spinner>




        <EditText
            android:id="@+id/aboutMe"
            style="@style/editext_graybg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pad_5dp"
            android:hint="@string/about_me" >
        </EditText>


        <LinearLayout
            android:id="@+id/main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/pad_20dp" >

            <Button
                android:id="@+id/btnReg"
                style="@style/btn_white_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/pad_10dp"
                android:layout_weight="1"
                android:text="@string/sign_up"
                android:onClick="onSignUp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
