<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.samridhamla06.aptitude.Views.AddGroupPage"
    tools:showIn="@layout/activity_add_group_page">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/pad_20dp"
        android:paddingLeft="@dimen/pad_15dp"
        android:paddingRight="@dimen/pad_15dp"
        android:paddingTop="@dimen/pad_20dp" >


        <EditText
            android:id="@+id/groupName"
            style="@style/editext_graybg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pad_5dp"
            android:hint="@string/group_name" >
        </EditText>

        <EditText
            android:id="@+id/location"
            style="@style/editext_graybg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pad_5dp"
            android:hint="@string/location" >
        </EditText>



        <EditText
            android:id="@+id/groupDescription"
            style="@style/editext_graybg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/group_description"
            android:layout_marginTop="@dimen/pad_5dp">


        </EditText>

        <LinearLayout
            android:id="@+id/main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/pad_20dp" >

            <Button
                android:id="@+id/btnReg"
                style="@style/btn_white_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/pad_10dp"
                android:layout_weight="1"
                android:text="@string/add_group"
                android:onClick="onClickingAddGroup"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
